--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,12 @@
-MONGODB_URI=mongodb+srv://shivam8709627398_db_user:chiranjeevi@chiranjeevispace.10rzmsb.mongodb.net/ChiranGBase?appName=ChiranjeeviSpace
+# Hugging Face API Token
+HF_TOKEN=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
+
+# MongoDB
+MONGODB_URI=mongodb://localhost:27017/techgium
+
+# FastAPI URL (for fetching patient reports)
+FASTAPI_URL=http://localhost:8000
+
+# Server
 PORT=5000
 NODE_ENV=development
