--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,4 +1,26 @@
-node_modules
-
+# Environment variables
 .env
 .env.local
+.env.*.local
+
+# Dependencies
+node_modules/
+
+# Build outputs
+dist/
+build/
+
+# Logs
+logs/
+*.log
+npm-debug.log*
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
