--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
 		"langchain": "^1.2.18",
 		"mongoose": "^9.0.0",
 		"nodemon": "^3.1.11",
-		"openai": "^6.18.0"
+		"openai": "^6.18.0",
+		"socket.io": "^4.8.3"
 	}
 }
