--- a/fastapi2/requirements.txt
+++ b/fastapi2/requirements.txt
@@ -58,3 +58,4 @@ pillow>=11.1.0
 # Multilingual Indian Language Support
 langdetect>=1.0.9  # Offline fallback for language detection (Sarvam /text-lid is primary)
 diskcache  # Fast disk-based persistent cache for Sarvam TTS and Translation
+inference-sdk
